--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/junosw/node-sandbox/issues"
   },
-  "homepage": "https://github.com/junosw/node-sandbox#readme"
+  "homepage": "https://github.com/junosw/node-sandbox#readme",
+  "dependencies": {
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0"
+  }
 }
